# TicketBuddy

./: .gitignore  Cargo.toml
backend/: .gitignore  Cargo.toml
backend/src/: client.rs  main.rs  seat_manager.rs  socket_manager.rs  test.rs
frontend/: package.json
frontend/src/: App.jsx
frontend/src/components/: HomeContent.jsx  PaymentMethods.jsx  SeatMap.jsx  SeatReservationForm.jsx  SeatSuggestions.jsx
frontend/src/contexts/: WebSocketContext.jsx
frontend/src/models/: Row.jsx  Seat.jsx  Section.jsx
frontend/src/pages/: home.jsx  payment.jsx
frontend/src/plugins/: Discover.jsx  Mastercard.jsx  PaymentPlugin.jsx  Visa.jsx
frontend/src/services/: WebSocketService.js
src/: client.rs  main.rs  seat_manager.rs  socket_manager.rs  test.rs
